рефакторинг хранения типов и параметров